--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
-    "build": "tsc",
-    "vercel-build": "npm run build"
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
